# git-learn

./: README.md
AdaptiveAutosarTraining/: CMakeLists.txt  EmployeeMain.cpp
AdaptiveAutosarTraining/Employee/: CMakeLists.txt  employee.h  getFunction.cpp
AdaptiveAutosarTraining/HelloWorld/: CMakeLists.txt  setFunction.cpp
